# kavelarchitect

./: .gitignore  .vercelignore  DEPLOYMENT.md  EMAIL_SETUP.md  SEO_ANALYSE.md  check_huizen.py  check_output.txt  fix_server.py  gmail_test_output.txt  next.config.js  package-lock.json  package.json  start-complete-system.bat  tailwind.config.js  tmp_revert_aanbod.js  tmp_update_aanbod.js  tsconfig.json  tsconfig.tsbuildinfo  upload-maps-to-supabase.js  vercel.json
.agent/: SEO_OPTIMALISATIE_REGIO.md
.claude/: settings.local.json
_old_root/: package.json  server.js  start-all.bat  start-backend.bat  start-dashboard.bat
app/: globals.css  layout.tsx  page.tsx  providers.tsx  robots.ts  robots.txt  sitemap.ts
backend/: .gitignore  DATABASE_SETUP.md  INSTALLEER_AUTOMATISCHE_TAAK.bat  INSTALLEER_AUTOMATISCHE_TAAK_MET_OPSTARTEN.bat  README.md  START_DASHBOARD.bat  _test_gmail_query.py  _wp_both_test.py  _wp_dual_post_test.py  _wp_media_diag.py  _wp_upload_test.py  oauth_console.py  oauth_local.py  run_funda_sync.bat  setup.cfg  setup_scheduled_task.ps1  sync_worker.py
backend/brikx/: funda_parser.py  wordpress_client.py
brikx_platform/: START-INSTRUCTIES.md  index.html  package-lock.json  package.json  server.js  start-dashboard.bat  start-quick.bat
components/: AanbodFilter.tsx  AanbodMap.tsx  AanbodMapClient.tsx  ArticleFilter.tsx  CTASticky.tsx  ElementorContent.tsx  FAQAccordion.tsx  FloatingAlertButton.tsx  InlineCTA.tsx  InlineKavelAlert.tsx  KavelAlertForm.tsx  KavelAlertOverlay.tsx  KavelRapportTeaser.tsx  ListingCard.tsx  NavBar.tsx  NavBarClient.tsx  (+5 more)
(+168 files in other folders)
