[metadata]
name = brikx
version = 0.1.0
description = Automatisering: Funda -> WordPress

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.32.0
    PyYAML>=6.0.1
    beautifulsoup4>=4.12.0
    lxml>=5.3.0
    google-api-python-client>=2.147.0
    google-auth-httplib2>=0.2.0
    google-auth-oauthlib>=1.2.0
    python-dateutil>=2.9.0.post0
    pillow>=10.4.0

[options.packages.find]
include = brikx
exclude =
    artifacts*
    state*
    secrets*
    tests*